deploy: 716dd145702fdffbbcbccc467a34d5282e82582f

--- a/nerdyversary.html
+++ b/nerdyversary.html
@@ -84,7 +84,7 @@
                     <h1 class="modulename">
 nerdyversary    </h1>
 
-                        <div class="docstring"><p><img src="https://github.com/rmnldwg/nerdyversary/blob/main/two_pi_pies.jpg" alt="Two Pi Pies" /></p>
+                        <div class="docstring"><p><img src="https://raw.githubusercontent.com/rmnldwg/nerdyversary/main/two_pi_pies.jpg" alt="Two Pi Pies" /></p>
 
 <h1 id="nerdyversary">Nerdyversary</h1>
 
