deploy: 80f6c73a51ea352d26be6ba5d36bd35eb4a15c85

--- a/nerdyversary.html
+++ b/nerdyversary.html
@@ -100,12 +100,16 @@ nerdyversary    </h1>
 
 <h3 id="from-pypi">From PyPI</h3>
 
-<blockquote>
-  <p>⚠️ <strong>Note:</strong>
-  This project is currently not yet on PyPI.</p>
-</blockquote>
+<p>Simply use</p>
+
+<pre><code>$ pip install nerdyversary
+</code></pre>
+
+<p>to install this package in your environment.</p>
 
 <h3 id="from-source">From Source</h3>
+
+<p>To install <code><a href="">nerdyversary</a></code> from source, follow these steps below:</p>
 
 <ol>
 <li><p>Clone the repository</p>
@@ -164,7 +168,7 @@ options:
 <pre><code>$ nerdyversary -d 2012-12-21 -s 2023-01-01 -e 2024-01-01 --format pipe --factor-lim 4 --max-power 3
 </code></pre>
 
-<p>will yield the following table:</p>
+<p>will yield a markdown table that renders into the following:</p>
 
 <table>
 <thead>
